# HighTide

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  PLAN.md  README.md  defs.bzl  docker_yosys.BUILD.bazel  gallery.html  index.html  merge_share.bzl  results.html  runorfs.sh  runorfs_ni.sh  yosys_slang.BUILD.bazel  yosys_slang.bzl
designs/asap7/NVDLA/: BUILD.bazel
designs/asap7/NVDLA/partition_a/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/NVDLA/partition_c/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/NVDLA/partition_m/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/NVDLA/partition_o/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/NVDLA/partition_p/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/NVDLA/sram/lef/: fakeram_10x64_1r1w.lef  fakeram_116x64_1r1w.lef  fakeram_11x128_1r1w.lef  fakeram_11x256_1r1w.lef  fakeram_144x160_1r1w.lef  fakeram_144x248_1r1w.lef  fakeram_144x256_1r1w.lef  fakeram_14x80_1r1w.lef  fakeram_15x80_1r1w.lef  fakeram_160x64_1r1w.lef  fakeram_168x60_1r1w.lef  fakeram_16x160_1r1w.lef  fakeram_16x32_1r1w.lef  fakeram_16x80_1r1w.lef  fakeram_18x128_1r1w.lef  fakeram_18x64_1r1w.lef  fakeram_192x32_1r1w.lef  fakeram_224x32_1r1w.lef  fakeram_224x64_1r1w.lef  fakeram_226x64_1r1w.lef  fakeram_226x80_1r1w.lef  fakeram_22x60_1r1w.lef  fakeram_256x128_1r1w.lef  fakeram_256x16_1r1w.lef  fakeram_256x32_1r1w.lef  fakeram_256x80_1r1w.lef  fakeram_272x16_1r1w.lef  fakeram_272x32_1r1w.lef  fakeram_288x20_1r1w.lef  fakeram_288x32_1r1w.lef  fakeram_288x64_1r1w.lef  fakeram_288x80_1r1w.lef  fakeram_32x128_1r1w.lef  fakeram_32x32_1r1w.lef  fakeram_40x512_1r1w.lef  fakeram_4x256_1r1w.lef  fakeram_64x128_1r1w.lef  fakeram_64x16_1r1w.lef  fakeram_64x256_1r1w.lef  fakeram_64x512_1r1w.lef  (+16 more)
designs/asap7/NVDLA/sram/lib/: fakeram_10x64_1r1w.lib  fakeram_116x64_1r1w.lib  fakeram_11x128_1r1w.lib  fakeram_11x256_1r1w.lib  fakeram_144x160_1r1w.lib  fakeram_144x248_1r1w.lib  fakeram_144x256_1r1w.lib  fakeram_14x80_1r1w.lib  fakeram_15x80_1r1w.lib  fakeram_160x64_1r1w.lib  fakeram_168x60_1r1w.lib  fakeram_16x160_1r1w.lib  fakeram_16x32_1r1w.lib  fakeram_16x80_1r1w.lib  fakeram_18x128_1r1w.lib  fakeram_18x64_1r1w.lib  fakeram_192x32_1r1w.lib  fakeram_224x32_1r1w.lib  fakeram_224x64_1r1w.lib  fakeram_226x64_1r1w.lib  fakeram_226x80_1r1w.lib  fakeram_22x60_1r1w.lib  fakeram_256x128_1r1w.lib  fakeram_256x16_1r1w.lib  fakeram_256x32_1r1w.lib  fakeram_256x80_1r1w.lib  fakeram_272x16_1r1w.lib  fakeram_272x32_1r1w.lib  fakeram_288x20_1r1w.lib  fakeram_288x32_1r1w.lib  fakeram_288x64_1r1w.lib  fakeram_288x80_1r1w.lib  fakeram_32x128_1r1w.lib  fakeram_32x32_1r1w.lib  fakeram_40x512_1r1w.lib  fakeram_4x256_1r1w.lib  fakeram_64x128_1r1w.lib  fakeram_64x16_1r1w.lib  fakeram_64x256_1r1w.lib  fakeram_64x512_1r1w.lib  (+16 more)
designs/asap7/NyuziProcessor/: BUILD.bazel  config.mk  constraint.sdc  pdn.tcl  pre_cts.tcl
designs/asap7/NyuziProcessor/sram/lef/: fakeram_16x52_1r1w.lef  fakeram_18x256_1r1w.lef  fakeram_1x256_1r1w.lef  fakeram_20x64_1r1w.lef  fakeram_20x64_2r1w.lef  fakeram_256x256_1r1w.lef  fakeram_256x512_1r1w.lef  fakeram_32x128_2r1w.lef  fakeram_3x256_1r1w.lef  fakeram_3x64_1r1w.lef  fakeram_512x1024_1r1w.lef  fakeram_512x2048_1r1w.lef  fakeram_512x256_1r1w.lef  fakeram_512x512_1r1w.lef  fakeram_7x256_1r1w.lef
designs/asap7/cnn/: BUILD.bazel  macro_placement.tcl
designs/asap7/coralnpu/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/core_et/: BUILD.bazel  constraint.sdc
designs/asap7/eyeriss/: BUILD.bazel  constraint.sdc
designs/asap7/eyeriss/sram/: fakeram_asap7.cfg
designs/asap7/floonoc/: BUILD.bazel  config.mk  constraint.sdc  io.tcl
designs/asap7/gemmini/: BUILD.bazel  constraint.sdc  io.tcl
designs/asap7/lfsr/: BUILD.bazel  config.mk  constraint.sdc
designs/asap7/litedram/: BUILD.bazel  constraint.sdc
designs/asap7/liteeth/: BUILD.bazel  constraint.sdc
designs/asap7/liteeth/liteeth_mac_axi_mii/: BUILD.bazel
designs/asap7/liteeth/liteeth_mac_wb_mii/: BUILD.bazel
designs/asap7/liteeth/liteeth_udp_raw_rgmii/: BUILD.bazel
designs/asap7/liteeth/liteeth_udp_stream_rgmii/: BUILD.bazel
designs/asap7/liteeth/liteeth_udp_stream_sgmii/: BUILD.bazel  constraint.sdc
designs/asap7/liteeth/liteeth_udp_usp_gth_sgmii/: BUILD.bazel  constraint.sdc
designs/asap7/minimax/: BUILD.bazel  constraint.sdc
designs/asap7/snitch_cluster/: BUILD.bazel  config.mk  constraint.sdc  io.tcl  pre_cts.tcl
designs/asap7/ternip/: BUILD.bazel  config.mk  constraint.sdc  macro_placement.tcl  ternip_pipelined_mem_fakeram7.v
designs/asap7/vortex/: BUILD.bazel  config.mk  constraint.sdc  io.tcl
designs/gt2n/NVDLA/: BUILD.bazel
designs/gt2n/NVDLA/partition_a/: BUILD.bazel  constraint.sdc  pre_cts.tcl
designs/gt2n/NVDLA/partition_m/: BUILD.bazel  constraint.sdc
designs/gt2n/NVDLA/partition_o/: BUILD.bazel  constraint.sdc  pre_cts.tcl
designs/gt2n/NVDLA/partition_p/: BUILD.bazel  constraint.sdc  pre_cts.tcl
designs/gt2n/cnn/: BUILD.bazel  constraint.sdc  macros.tcl
designs/gt2n/floonoc/: BUILD.bazel  constraint.sdc  io.tcl
designs/gt2n/lfsr/: BUILD.bazel  constraint.sdc
designs/gt2n/minimax/: BUILD.bazel  constraint.sdc
designs/gt2n/sha3/: BUILD.bazel  constraint.sdc
designs/nangate45/NVDLA/: BUILD.bazel
designs/nangate45/NVDLA/partition_a/: BUILD.bazel  constraint.sdc
designs/nangate45/NVDLA/partition_c/: BUILD.bazel  constraint.sdc
designs/nangate45/NVDLA/partition_m/: BUILD.bazel  constraint.sdc
designs/nangate45/NVDLA/partition_o/: BUILD.bazel  constraint.sdc
designs/nangate45/NVDLA/partition_p/: BUILD.bazel  constraint.sdc
designs/nangate45/NyuziProcessor/: BUILD.bazel  constraint.sdc
designs/nangate45/cnn/: BUILD.bazel  config.mk  constraint.sdc  macro_placement.tcl
designs/nangate45/eyeriss/: BUILD.bazel  constraint.sdc
designs/nangate45/eyeriss/sram/: fakeram_nangate45.cfg
designs/nangate45/floonoc/: BUILD.bazel  config.mk  constraint.sdc  io.tcl
designs/nangate45/gemmini/: BUILD.bazel  config.mk  constraint.sdc
(+856 files in other folders)
