"""HighTide module — layered on top of bazel-orfs (pinned via submodule).

bazel-orfs lives at ./bazel-orfs as a git submodule.  Most Bazel
settings (dep versions, patches, ORFS/OpenROAD/Qt commits) come from
bazel-orfs's own MODULE.bazel; we re-declare the overrides at the
root because git_override and single_version_override are only
honored in the root module, and we reference patch files from the
submodule to avoid duplication.

HighTide-specific additions on top:
  - yosys-slang plugin built from source and merged into yosys_share
  - LLVM 20.1.8 toolchain for OpenROAD's C++20 source build
  - Python 3.13 toolchain for bazel-orfs's pip deps
"""

module(
    name = "hightide",
    version = "0.0.1",
)

# --- bazel-orfs pinned via submodule ---
bazel_dep(name = "bazel-orfs")
local_path_override(
    module_name = "bazel-orfs",
    path = "bazel-orfs",
)

bazel_dep(name = "bazel-orfs-verilog")
local_path_override(
    module_name = "bazel-orfs-verilog",
    path = "bazel-orfs/verilog",
)

# --- Non-BCR deps required by bazel-orfs (git_override is root-only) ---
# Commits + patch sets mirror bazel-orfs/MODULE.bazel at the pinned
# submodule commit.  Keep in sync when bumping the submodule.
#
# patches/ holds symlinks into bazel-orfs/patches/ (bazel's
# git_override only accepts patch labels from the main repo).

bazel_dep(name = "orfs")
git_override(
    module_name = "orfs",
    commit = "2f4de31a0f3f6402ca74887f67b75a9303c6e061",
    patch_strip = 1,
    patches = [
        "//patches:0035-fix-remove-non-root-overrides-from-MODULE.bazel.patch",
        "//patches:orfs-preserve-tool-exe-env.patch",
        "//patches:orfs-log-cmd-clock-fallback.patch",
    ],
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD-flow-scripts.git",
)

bazel_dep(name = "openroad")
git_override(
    module_name = "openroad",
    commit = "5f1bd87f37fd3c6dc83ad2195cc63b7b366771bc",
    init_submodules = True,
    remote = "https://github.com/The-OpenROAD-Project/OpenROAD.git",
)

bazel_dep(name = "qt-bazel")
git_override(
    module_name = "qt-bazel",
    commit = "886104974c2fd72439f2c33b5deebf0fe4649df7",
    remote = "https://github.com/The-OpenROAD-Project/qt_bazel_prebuilts",
)

# --- Yosys (BCR) with visibility / headers / tcl9 patches ---
bazel_dep(name = "yosys", version = "0.62")
single_version_override(
    module_name = "yosys",
    patch_strip = 1,
    patches = [
        "//patches:yosys-visibility.patch",
        "//patches:yosys-hdrs.patch",
        "//patches:yosys-tcl9-mp-to-ubin.patch",
    ],
)

bazel_dep(name = "abc", version = "0.64-yosyshq.bcr.1")
bazel_dep(name = "glpk", version = "5.0.bcr.4")

# Pulled transitively: or-tools@9.15 → soplex@7.1.4.bcr.1 pins
# boost.multiprecision / boost.serialization at 1.87.0 (compat 108700),
# but openroad → boost.* wants 1.89.0.bcr.2 (compat 0).  soplex@7.1.4.bcr.3
# rebuilt against the newer boost; force that via single_version_override.
single_version_override(
    module_name = "soplex",
    version = "7.1.4.bcr.3",
)

# --- LLVM toolchain (OpenROAD needs C++20 / libc++) ---
bazel_dep(name = "toolchains_llvm", version = "1.5.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    llvm_version = "20.1.8",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
)

# --- Python 3.13 toolchain ---
bazel_dep(name = "rules_python", version = "1.8.5")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.13",
)

# --- yosys-slang plugin (built from source) ---
yosys_slang = use_extension("//:yosys_slang.bzl", "yosys_slang")
use_repo(yosys_slang, "yosys-slang")

# --- ORFS extension: merged yosys_share with slang plugin ---
orfs = use_extension("@bazel-orfs//:extension.bzl", "orfs_repositories")
orfs.default(
    yosys_share = "//:yosys_share_with_slang",
)
