"""BUILD file for extracting yosys + plugins from the ORFS Docker image.

The upstream bazel-orfs //:docker_openroad.BUILD.bazel extracts only
the OpenROAD binary and runtime libs. Our designs (bp_processor) need
the slang frontend, which lives in the image's yosys plugin directory,
so we re-extract the same image with a custom BUILD file exposing
yosys, yosys-abc, and the yosys share tree (including plugins).

Bazel's repository cache is content-addressed by sha256, so the image
layers are downloaded once and shared between this repo and
@docker_orfs_image.
"""

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "ld.so",
    srcs = ["_lib/ld-linux-x86-64.so.2"],
)

filegroup(
    name = "lib",
    srcs = glob(
        [
            "lib/x86_64-linux-gnu/**/*.so*",
            "usr/lib/x86_64-linux-gnu/*.so*",
            "OpenROAD-flow-scripts/tools/install/yosys/lib/*.so*",
        ],
        allow_empty = True,
    ),
)

# All files under share/yosys (techlib cells, plugins including slang.so).
filegroup(
    name = "yosys_share",
    srcs = glob(["OpenROAD-flow-scripts/tools/install/yosys/share/yosys/**"]),
)

filegroup(
    name = "yosys",
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys"],
    data = [
        ":ld.so",
        ":lib",
        ":yosys_share",
    ],
)

filegroup(
    name = "yosys-abc",
    srcs = ["OpenROAD-flow-scripts/tools/install/yosys/bin/yosys-abc"],
    data = [
        ":ld.so",
        ":lib",
    ],
)
