package(default_visibility = ["//designs/asap7/NVDLA:__subpackages__"])

# All FakeRAM LEFs/LIBs shared across the 5 NVDLA partitions.
# Per-partition config.mk references only a subset of these; for the
# Bazel flow each partition pulls its own subset by name.

filegroup(
    name = "sram_lefs_all",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs_all",
    srcs = glob(["sram/lib/*.lib"]),
)

# ---- Per-partition SRAM subsets (mirroring partition_*/config.mk) ----

# partition_a: 256x16, 272x16
filegroup(
    name = "sram_lefs_a",
    srcs = [
        "sram/lef/fakeram_256x16_1r1w.lef",
        "sram/lef/fakeram_272x16_1r1w.lef",
    ],
)

filegroup(
    name = "sram_libs_a",
    srcs = [
        "sram/lib/fakeram_256x16_1r1w.lib",
        "sram/lib/fakeram_272x16_1r1w.lib",
    ],
)

# partition_c: 64x256, 64x16, 6x128, 66x8, 11x128
filegroup(
    name = "sram_lefs_c",
    srcs = [
        "sram/lef/fakeram_64x256_1r1w.lef",
        "sram/lef/fakeram_64x16_1r1w.lef",
        "sram/lef/fakeram_6x128_1r1w.lef",
        "sram/lef/fakeram_66x8_1r1w.lef",
        "sram/lef/fakeram_11x128_1r1w.lef",
    ],
)

filegroup(
    name = "sram_libs_c",
    srcs = [
        "sram/lib/fakeram_64x256_1r1w.lib",
        "sram/lib/fakeram_64x16_1r1w.lib",
        "sram/lib/fakeram_6x128_1r1w.lib",
        "sram/lib/fakeram_66x8_1r1w.lib",
        "sram/lib/fakeram_11x128_1r1w.lib",
    ],
)

# partition_o: 18x128, 8x256, 4x256, 7x256, 66x64, 15x80, 22x60, 32x128, 9x80
filegroup(
    name = "sram_lefs_o",
    srcs = [
        "sram/lef/fakeram_18x128_1r1w.lef",
        "sram/lef/fakeram_8x256_1r1w.lef",
        "sram/lef/fakeram_4x256_1r1w.lef",
        "sram/lef/fakeram_7x256_1r1w.lef",
        "sram/lef/fakeram_66x64_1r1w.lef",
        "sram/lef/fakeram_15x80_1r1w.lef",
        "sram/lef/fakeram_22x60_1r1w.lef",
        "sram/lef/fakeram_32x128_1r1w.lef",
        "sram/lef/fakeram_9x80_1r1w.lef",
    ],
)

filegroup(
    name = "sram_libs_o",
    srcs = [
        "sram/lib/fakeram_18x128_1r1w.lib",
        "sram/lib/fakeram_8x256_1r1w.lib",
        "sram/lib/fakeram_4x256_1r1w.lib",
        "sram/lib/fakeram_7x256_1r1w.lib",
        "sram/lib/fakeram_66x64_1r1w.lib",
        "sram/lib/fakeram_15x80_1r1w.lib",
        "sram/lib/fakeram_22x60_1r1w.lib",
        "sram/lib/fakeram_32x128_1r1w.lib",
        "sram/lib/fakeram_9x80_1r1w.lib",
    ],
)

# partition_p: 16x160, 65x160, 14x80, 66x80
filegroup(
    name = "sram_lefs_p",
    srcs = [
        "sram/lef/fakeram_16x160_1r1w.lef",
        "sram/lef/fakeram_65x160_1r1w.lef",
        "sram/lef/fakeram_14x80_1r1w.lef",
        "sram/lef/fakeram_66x80_1r1w.lef",
    ],
)

filegroup(
    name = "sram_libs_p",
    srcs = [
        "sram/lib/fakeram_16x160_1r1w.lib",
        "sram/lib/fakeram_65x160_1r1w.lib",
        "sram/lib/fakeram_14x80_1r1w.lib",
        "sram/lib/fakeram_66x80_1r1w.lib",
    ],
)
