load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "NyuziProcessor",
    platform = "asap7",
    verilog_files = ["//designs/src/NyuziProcessor:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
        "PRE_CTS_TCL": [":pre_cts.tcl"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "55",
        "PLACE_DENSITY_LB_ADDON": "0.22",
        "MACRO_PLACE_HALO": "6 6",
        "TNS_END_PERCENT": "100",
        # ODB-1200: with the wd_in-fixed fakeram macros the resizer's
        # CTS-time SplitLoadMove now trips InsertBufferBeforeLoads on a
        # stale load list ("cts.tcl, 82 ODB-1200"). Drop only `split_load`
        # from the move sequence (gemmini-style targeted fix) so the rest
        # of CTS repair_timing keeps working — don't skip the whole pass.
        "SETUP_MOVE_SEQUENCE": "unbuffer,sizeup,swap,buffer,clone",
    },
)
