load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "NyuziProcessor",
    platform = "asap7",
    verilog_files = ["//designs/src/NyuziProcessor:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
        "PRE_CTS_TCL": [":pre_cts.tcl"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "55",
        "PLACE_DENSITY_LB_ADDON": "0.22",
        "MACRO_PLACE_HALO": "6 6",
        "TNS_END_PERCENT": "100",
        # ODB-1200 at CTS ("cts.tcl, 82 ODB-1200", InsertBufferBeforeLoads
        # on a stale load list). Tried the gemmini-style targeted fix
        # (drop `split_load` from SETUP_MOVE_SEQUENCE) but ODB-1200 still
        # recurred for this design with `-sequence unbuffer,sizeup,swap,
        # buffer,clone` — InsertBufferBeforeLoads is reached via another
        # move here. Per the documented escalation (split_load-drop first,
        # full skip only if that doesn't clear it), fall back to skipping
        # the CTS repair pass entirely; route still does its own
        # hold-repair so this is safe.
        "SKIP_CTS_REPAIR_TIMING": "1",
    },
)
