load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "cnn",
    platform = "asap7",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "45",
        "PLACE_DENSITY": "0.50",
        "PLACE_PINS_ARGS": "-min_distance 30 -min_distance_in_tracks",
        "MACRO_PLACE_HALO": "12 12",
        "MACRO_BLOCKAGE_HALO": "0.5",
    },
)


# --- k8s cnn-a7-die param-sweep (temporary; remove after sweep) ---

hightide_design(
    name = "cnn_a1",
    top = "cnn",
    platform = "asap7",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "DIE_AREA": "0 0 2400 2400",
        "CORE_AREA": "5 5 2395 2395",
        "PLACE_DENSITY": "0.45",
        "PLACE_PINS_ARGS": "-min_distance 30 -min_distance_in_tracks",
        "MACRO_PLACE_HALO": "20 20",
        "MACRO_BLOCKAGE_HALO": "0.5",
    },
)

hightide_design(
    name = "cnn_a2",
    top = "cnn",
    platform = "asap7",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "DIE_AREA": "0 0 2800 2800",
        "CORE_AREA": "5 5 2795 2795",
        "PLACE_DENSITY": "0.40",
        "PLACE_PINS_ARGS": "-min_distance 30 -min_distance_in_tracks",
        "MACRO_PLACE_HALO": "30 30",
        "MACRO_BLOCKAGE_HALO": "0.5",
    },
)

hightide_design(
    name = "cnn_a3",
    top = "cnn",
    platform = "asap7",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "DIE_AREA": "0 0 3200 3200",
        "CORE_AREA": "5 5 3195 3195",
        "PLACE_DENSITY": "0.35",
        "PLACE_PINS_ARGS": "-min_distance 30 -min_distance_in_tracks",
        "MACRO_PLACE_HALO": "40 40",
        "MACRO_BLOCKAGE_HALO": "0.5",
    },
)
