load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "cnn",
    platform = "asap7",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "45",
        "PLACE_DENSITY": "0.50",
        "PLACE_PINS_ARGS": "-min_distance 30 -min_distance_in_tracks",
        "MACRO_PLACE_HALO": "12 12",
        "MACRO_BLOCKAGE_HALO": "0.5",
    },
)
