load("//:defs.bzl", "hightide_design")

filegroup(
    name = "sram_lefs",
    srcs = glob(["sram/lef/*.lef"]),
)

filegroup(
    name = "sram_libs",
    srcs = glob(["sram/lib/*.lib"]),
)

hightide_design(
    name = "cnn",
    platform = "asap7",
    verilog_files = ["//designs/src/cnn:rtl"],
    sources = {
        "SDC_FILE": [":constraint.sdc"],
        "ADDITIONAL_LEFS": [":sram_lefs"],
        "ADDITIONAL_LIBS": [":sram_libs"],
    },
    arguments = {
        "SYNTH_HIERARCHICAL": "1",
        "CORE_UTILIZATION": "45",
        "PLACE_DENSITY": "0.50",
        "PLACE_PINS_ARGS": "-min_distance 30 -min_distance_in_tracks",
        "MACRO_PLACE_HALO": "12 12",
        "MACRO_BLOCKAGE_HALO": "0.5",
        # New-resizer (2026-06 tools) post-GRT repair_timing does not converge on
        # this design's macro-placement-bound critical path (RTLMP places the
        # SRAMs such that Fmax regresses ~49%; see DECISIONS.md).  repair_timing
        # spends unbounded time (per-iteration incremental STA explodes past an
        # hour) without ever closing the structurally-unfixable path.  Skip the
        # post-GRT repair so the design finishes; detail-route still hold-repairs.
        "SKIP_INCREMENTAL_REPAIR": "1",
    },
)
